<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutInstructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange600"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.funfacts.InstructionsActivity"
    tools:ignore="ExtraText">

    <Button
        android:id="@+id/BackToFunFacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/indigo800"
        android:text="@string/back_to_home"
        android:textColor="#80ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_instructViewSavedPickuplines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pul_savedButton"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/tv_homeTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_toView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_view_pickuplines_in_database"
        android:layout_below="@+id/button_toAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/indigo800"
        android:textColor="#80ffffff"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_toUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_update_existing_pickuplines"
        android:layout_below="@+id/button_toView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/indigo800"
        android:textColor="#80ffffff"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_toDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_delete_existing_pickupline"
        android:layout_below="@+id/button_toUpdate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/indigo800"
        android:textColor="#80ffffff"
        android:textSize="14sp" /><![CDATA[/>

    ]]>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_toAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_add_a_pickupline"
        android:background="@color/indigo800"
        android:textColor="#80ffffff"
        android:textSize="14sp"
        android:layout_below="@+id/tv_instructPageAddnew"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_page"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/tv_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_instructVSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_on_this_button_to_view_all_your_saved_pickuplines"
        android:textSize="18sp"
        android:layout_below="@+id/tv_instructViewSavedPickuplines"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_instructAddNewPUL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_buttons"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/tv_instructVSP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_on_this_button_to_add_a_new_pickupline_to_your_database_it_will_take_you_to_a_new_page_read_the_instructions_in_the_next_section_for_full_instructions"
        android:textSize="18sp"
        tools:ignore="SmallSp"
        android:layout_below="@+id/tv_instructAddNewPUL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_instructPageAddnew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_pickupline_page"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
