<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.funfacts.AddPickUpLineActivity"
    android:background="@color/indigo800"
                android:id="@+id/addPickUpActivityLayout">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backToMain"
        android:id="@+id/backToMainActivityButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/indigo800"
        android:background="@color/orange600"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/editText_pickupline"
        android:hint="@string/enter_pickupline"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_genre"
        android:layout_below="@+id/editText_pickupline"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_genre" />

    <TextView
        android:text="@string/pickupline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pickupline"
        android:layout_alignBaseline="@+id/editText_pickupline"
        android:layout_alignBottom="@+id/editText_pickupline"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_genre"
        android:layout_alignBaseline="@+id/editText_genre"
        android:layout_alignBottom="@+id/editText_genre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        android:textColor="@color/indigo800"
        android:id="@+id/button_add"
        android:background="@color/orange600"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/editText_genre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/view_all"
        android:textColor="@color/indigo800"
        android:background="@color/orange600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_add"
        android:layout_toRightOf="@+id/button_add"
        android:layout_toEndOf="@+id/button_add"
        android:id="@+id/button_view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editText_genre"
        android:layout_alignLeft="@+id/editText_genre"
        android:layout_alignStart="@+id/editText_genre"
        android:id="@+id/editText_id"
        android:hint="@string/updatingOnlyHint" />

    <TextView
        android:text="@string/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_id"
        android:layout_alignBaseline="@+id/editText_id"
        android:layout_alignBottom="@+id/editText_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/delete"
        android:textColor="@color/indigo800"
        android:background="@color/orange600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete"
        android:layout_alignBaseline="@+id/button_id"
        android:layout_alignBottom="@+id/button_id"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/update"
        android:textColor="@color/indigo800"
        android:background="@color/orange600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_id"
        android:layout_alignBaseline="@+id/button_view"
        android:layout_alignBottom="@+id/button_view"
        android:layout_toLeftOf="@+id/button_delete"
        android:layout_toStartOf="@+id/button_delete" />

</RelativeLayout>
