<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/relative"
    tools:context=".FunFactsActivity"
    android:background="@drawable/background">

    <TextView android:text="@string/title"
        android:layout_height="wrap_content"
        android:textColor="#80ffffff"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:background="@color/indigo800"
        android:padding="@dimen/abc_action_bar_content_inset_material"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addANewPickUpLineText"
        android:id="@+id/goToAddPickUpLineButton"
        android:textColor="@color/indigo800"
        android:background="@color/orange600"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fadingEdge="horizontal" />

    <Button
        android:text="@string/view_saved_pickuplines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/indigo800"
        android:background="@color/orange600"
        android:id="@+id/button_viewFromMainActivity"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textColor="@color/indigo800"
        android:background="@color/orange600"
        android:id="@+id/button_instructions"
        android:layout_below="@+id/button_viewFromMainActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/readme"
        android:textColor="@color/indigo800"
        android:background="@color/orange600"
        android:id="@+id/button_readme"
        android:layout_below="@+id/button_instructions"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Button
        android:text="Theme1"
        android:padding="5dp"
        android:textColor="@color/orange600"
        android:background="@color/indigo800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:id="@+id/button_changeTheme"
        android:layout_above="@+id/goToAddPickUpLineButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Theme3"
        android:padding="5dp"
        android:textColor="@color/orange600"
        android:background="@color/indigo800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_changeTheme3"
        android:layout_alignBaseline="@+id/button_changeTheme"
        android:layout_alignBottom="@+id/button_changeTheme"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Theme2"
        android:padding="5dp"
        android:textColor="@color/orange600"
        android:background="@color/indigo800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_changeTheme2"
        android:layout_alignBaseline="@+id/button_changeTheme"
        android:layout_alignBottom="@+id/button_changeTheme"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Username"
        android:padding="5dp"
        android:textColor="@color/orange600"
        android:background="@color/indigo800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sum"
        android:layout_above="@+id/button_changeTheme2"
        android:layout_alignLeft="@+id/button_changeTheme2"
        android:layout_alignStart="@+id/button_changeTheme2"
        android:layout_marginBottom="11dp" />

</RelativeLayout>
